# OTOClaw

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  version.json  vite.config.ts
.github/workflows/: build.yml
scripts/: sync-version.js
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: agents.rs  chat.rs  common.rs  config.rs  cron.rs  diagnostics.rs  gateway.rs  installer.rs  mod.rs  prompt.rs  sandbox.rs  service.rs  skills.rs  topAgent.rs  updater.rs
src-tauri/src/models/: config.rs  cron.rs  mod.rs  sandbox.rs  updater.rs
src-tauri/src/utils/: shell.rs  text.rs
src/components/: Dialog.vue  UpdateDialog.vue
src/components/AIConfig/: ProviderDialog.vue  index.vue  types.ts
src/components/Agents/: AgentChannelBindingDialog.vue  AgentDialog.vue  AgentWorkspaceEditor.vue  index.vue  topAgent.vue
src/components/Channels/: WecomAccountManager.vue  index.vue
src/components/Chat/: GatewayConfig.vue  HistoryPanel.vue  InputArea.vue  MessageList.vue  NewSessionDialog.vue  ReasoningToggle.vue  SelectorBar.vue  ThinkingBlock.vue  index.vue  types.ts  utils.ts
src/components/Cron/: CronJobDialog.vue  RunLogDialog.vue  RunLogFilesViewer.vue  index.vue
src/components/Dashboard/: QuickActions.vue  StatusCard.vue  SystemInfo.vue  (+1 more)
src/composables/: useDialog.ts  useService.ts
src/lib/: logger.ts  tauri.ts
src/stores/: appStore.ts  chatStore.ts
(+12 files in other folders)
