[package]
name = "otoclaw"
version = "1.0.5"
description = "OpenClaw 跨平台管理工具"
authors = ["OpenClaw Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
shellexpand = "3"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
zip = "2"
tempfile = "3"
reqwest = { version = "0.11", features = ["json", "stream"] }
semver = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
